-better msg handling

--- a/GUI/design.ui
+++ b/GUI/design.ui
@@ -180,7 +180,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>QoS:</string>
+    <string>QoS (MQTT):</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -259,6 +259,32 @@
    </property>
    <property name="text">
     <string>Durschsnittliche Latenz:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_8">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>280</y>
+     <width>171</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Nachrichten Verlust:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="msg_lostLabel">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>280</y>
+     <width>67</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
