--- a/GUI/design.ui
+++ b/GUI/design.ui
@@ -365,6 +365,19 @@
     <string>TextLabel</string>
    </property>
   </widget>
+  <widget class="QCheckBox" name="extra_clientCheckBox">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>170</y>
+     <width>111</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Extra Client</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
